Created ClothesTypeController
ClothesTypeController allows to make CRUD operations on 'clothes_types' table in database
Request mapping to this rest controller is '/clothes-types'
Missing updateClothesType method tests